[tool.poetry]
name = "rankeval"
version = "0.1.0"
description = "Evaluate rankings for Mwmbl web search"
authors = ["Daoud Clarke <daoud.clarke@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
requests = "^2.26.0"
pandas = "^1.3.5"
scipy = "^1.8.0"
scikit-learn = "^1.0.2"
mwmbl = {git = "ssh://git@github.com/mwmbl/mwmbl", rev = "update-index"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
